apps/gitea/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    spec.ingressClassName: traefik
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 2.4.2
  name: gitea
  namespace: gitea
spec:
  ingressClassName: traefik
  rules:
    - host: gitea.gv.ca
      http:
        paths:
          - backend:
              service:
                name: gitea-http
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gitea.gv.ca
      secretName: gitea-tls
